# literal-rust

./: LICENSE  README.md
aoc2024/day10/src/: lib.rs  main.rs
aoc2024/day16/src/: lib.rs  main.rs
black-hawk/: Cargo.toml
black-hawk/html/: index.html
black-hawk/src/: consts.rs  error.rs  handler.rs  lib.rs  main.rs  parse.rs  request.rs  response.rs  route.rs
black-hawk/src/request/: boundary.rs  path.rs
black-hawk/src/response/: body.rs  error.rs  status.rs
cache-mem/: Cargo.toml
cache-mem/benches/: bench_counters.rs
cache-mem/src/: lib.rs
kadey/: .env  Cargo.toml
kadey/src/: core.rs  lib.rs  main.rs
kadey/src/core/: kbucket.rs  node.rs  route.rs
kadey/src/rpc/: request.rs  response.rs
rat-rs/: Cargo.toml
rat-rs/benches/: bench_gcd.rs
rat-rs/src/: bigfrac.rs  conv.rs  error.rs  frac.rs  lib.rs  ops.rs
trie-harder/: Cargo.toml  a.c
trie-harder/src/: lib.rs
