[package]
name = "black-hawk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
nom = "7.1.3"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.9"
tokio = { version = "1.43.0", features = ["full"] }
urlencoding = "2.1.3"
async-trait = "0.1.88"
radix_trie = "0.2.1"
